2002-07-07  Seth Nickell  <snickell@stanford.edu>

	* libgnomevfs/gnome-vfs-method.gob:

	Ahem. Getting built accidentally. Not a good thing.
	Replacing decent clean files.
	
2002-07-05  Stephen Browne  <stephen.browne@sun.com>
	* modules/cdemenu-desktop-method.c
	Patch from rohit.raveendran@wipro.com
	modified the code so that the function create_cde_icon_name_cache
	creates the file g-cdeiconnames with permissions 644 in .gnome 
	directory in the users home directory.
	Fixes #87267

2002-06-27  Michael Meeks  <michael@ximian.com>

	* modules/vfolder-desktop-method.c
	(try_free_file_monitors_create_files_unlocked): use
	ensure_folder_unlocked to avoid deadlock.
	(rescan_monitors): ditto. #84910

2002-06-25  Jody Goldberg <jody@gnome.org>
 
 	* libgnomevfs/gnome-vfs-mime.c (file_date_record_update_mtime) : track
 	  monitor files even if they do not exist at start up. That way we can
 	  notice the first user defined mime type is added.
 	(mime_fill_from_file) : ditto.
 	(mime_load) : don't ignore the unborn files just because their parent
 	  dir does not exist yet.

2002-06-25  Damon Chaplin  <damon@ximian.com>

	* libgnomevfs/gnome-vfs-async-job-map.c (gnome_vfs_async_job_map_init):
	initialize the async_job_callback_map_lock mutex here, instead of in
	gnome_vfs_async_job_add_callback(), so we can use it even when
	async_job_callback_map is NULL.
	(gnome_vfs_async_job_add_callback): lock the above mutex before
	checking & creating the async_job_callback_map hash table, to avoid
	a tiny race condition.
	(gnome_vfs_async_job_cancel_job_and_callbacks): lock the above mutex
	first and set job->cancelled. Previously it was just returning if
	async_job_callback_map was NULL, which meant that job->cancelled
	didn't get set.
	(async_job_callback_map_destroy): don't destroy the
	async_job_callback_map_lock mutex here. We keep it around forever.

	Fixes bug #74189.

2002-06-21  Seth Nickell  <snickell@stanford.edu>

	* doc/tmpl/gnome-vfs-method.sgml: